# project-phosphophyllite

./: .gitignore  README.md  index.html  package-lock.json  package.json  readme.md  site.webmanifest  tsconfig.json  tsconfig.node.json  vite.config.ts
assets/: @babel-BmrWWf-u.js  @babel-BmrWWf-u.js.map  @babel-v6KKqBqE.js  @babel-v6KKqBqE.js.map  @emotion-COtVVExa.js  @emotion-Wrr6QDEl.js  @emotion-Wrr6QDEl.js.map  @emotion-mbt7MCjG.js  @emotion-mbt7MCjG.js.map  @floating-ui-DbJxYczU.js  @floating-ui-Dqs6qZv0.js  @floating-ui-Dqs6qZv0.js.map  @floating-ui-pbL9cu8d.js  @floating-ui-pbL9cu8d.js.map  @fontsource-CFxDKzHc.css  @fontsource-CenhckFD.css  @fontsource-DVT8FK-y.css  @fontsource-f1FhE2QB.css  @monaco-editor-C6nOapT0.js  @monaco-editor-C6nOapT0.js.map  @mui-B0-j382W.js  @mui-B0-j382W.js.map  @mui-BlE6RBwj.js  @mui-BlE6RBwj.js.map  @mui-C-rVg-A_.js  @mui-CNTa1kuL.js  @mui-CNTa1kuL.js.map  @mui-CftlJoSJ.js  @mui-CftlJoSJ.js.map  @mui-DO5ruoPV.js  @mui-DO5ruoPV.js.map  @mui-Dca6KVst.js  @mui-Dca6KVst.js.map  @mui-DdYmStMr.js  @mui-DdYmStMr.js.map  @mui-Dg0HtIj6.js  @mui-Dg0HtIj6.js.map  @mui-DqDF_VHg.js  @mui-DqDF_VHg.js.map  @octokit-Bil4TfDC.js  (+332 more)
public/: site.webmanifest
src/: App.tsx  main.css  main.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/migrations/: 20240703165355_add_repositories.sql  20240703165418_add_issue_table.sql  20240703165424_add_comment_table.sql  20240809110458_fix_table_name.sql
src-tauri/resources/secrets/: INSTALLATION_ID.txt  PRIVATE_KEY.txt
src-tauri/resources/settings/: issue_query_preferences.json  issue_query_settings.json  repo_query_preferences.json  repo_query_settings.json  sync_data.json
src-tauri/src/: api.rs  config.rs  data.rs  database.rs  github.rs  main.rs  markdown.rs  model.rs  models.rs  open.rs  paths.rs  pref.rs  secrets.rs  settings.rs  shell.rs  temp.rs
src-tauri/src/app/: constants.rs  setup.rs
src-tauri/src/app/setup/: database.rs  mod.rs  octocrab.rs  paths.rs
src-tauri/src/database/: get.rs  mod.rs  prep.rs  setup.rs  update.rs
src-tauri/src/github/: get.rs  mod.rs  patch.rs  post.rs  put.rs  setup.rs
src/api/: db.ts  secrets.ts  setting.ts
src/assets/: HexagonGroup.tsx
src/components/: AdaptiveListItem.tsx  AppHeader.tsx  CommandPalette.tsx  CommentDetails.tsx  IssueCard.tsx  IssueDataTable.tsx  IssueDetails.tsx  IssueQueryForm.tsx  Markdown.tsx  PaddedPaper.tsx  PopoverButton.tsx  PoppoverButton.tsx  RepoCard.tsx  RepoDataTable.tsx  RepoDetails.tsx  RepoList.tsx  RepoMetadataDetails.tsx  RepoQueryForm.tsx  SortRuleMenu.tsx  StyledAppBar.tsx  StyledAutocomplete.tsx  StyledBreadcrumbs.tsx  StyledCard.tsx  StyledDataTable.tsx  StyledEditor.tsx  StyledGrid.tsx  StyledHorizontalFlexBox.tsx  StyledIconButton.tsx  StyledSearchItem.tsx  StyledSelect.tsx  StyledSelectMultiple.tsx  StyledTableToolbar.tsx  StyledTextField.tsx  StyledVerticalFlexBox.tsx  TagAutocomplete.tsx  TerminalStyleList.tsx  TopicChips.tsx  k.css
src/constants/: ISSUE_FILTER_OPTIONS.ts  REPO_FILTER_OPTIONS.ts  filterOptions.ts  index.ts
src/core/: encoding.ts  filtering.ts  format.ts  index.ts  json.ts  markdown.ts  parsing.ts  query.ts  sorting.ts  text.ts  time.ts
src/database/: api.ts  auth.ts  cached.ts  get.ts  index.ts  migration.ts  preferences.ts  sync.ts
(+192 files in other folders)
