[package]
name = "app"
version = "0.1.0"
description = "A GitHub issue aggregator powered by Tauri and Octokit."
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
open = "5.1.3"
tauri = { version = "1.6.5", features = [ "path-all", "fs-all", "shell-open"] }
tokio = { version = "1.33.0", features = ["time", "rt", "macros"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "migrate"] }
serde_json = "1.0"
futures = "0.3"
octocrab = "0.38.0"
jsonwebtoken = "9.3.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
